--- a/xdsclient/src/assets/components/dashboaerd-pages/xpcs-dashboard/xpcs-dashboard.component.html
+++ b/xdsclient/src/assets/components/dashboaerd-pages/xpcs-dashboard/xpcs-dashboard.component.html
@@ -1,1 +1,66 @@
-<p>xpcs-dashboard works!</p>
+<div class="grid">
+
+    <article>
+        <div>
+            <h1>General Information</h1>
+        </div>
+        <div class="info-style">
+            <div class="card">
+                <div class="averageRatingDiv">
+                    <p id="ratingAvr" class="numbers-circle">
+                        10
+                    </p>
+                </div>
+                <div class="info">
+                    <h3>Datasets</h3>
+                </div>
+            </div>
+            <div class="card">
+                <div class="averageRatingDiv">
+                    <p id="ratingAvr" class="numbers-circle">
+                        8
+                    </p>
+                </div>
+                <div class="info">
+                    <h3>Analysed</h3>
+                </div>
+            </div>
+            <div class="card">
+                <div class="averageRatingDiv">
+                    <p id="ratingAvr" class="numbers-circle">
+                        2
+                    </p>
+                </div>
+                <div class="info">
+                    <h3>Waiting</h3>
+                </div>
+            </div>
+            <div class="card">
+                <div class="averageRatingDiv">
+                    <p id="ratingAvr" class="numbers-circle">
+                        2
+                    </p>
+                </div>
+                <div class="info">
+                    <h3>Publications</h3>
+                </div>
+            </div>
+        </div>
+    </article>
+
+
+    <article>   
+        <div>
+            <h1>Available software</h1>
+        </div>
+        <div class="software-content" id="software-content" >
+            
+        </div>
+    </article>
+    <article>
+        <div>
+            <h1>Your XPCS Datasets</h1>
+        </div>
+     </article>
+
+</div>
