--- a/xdsclient/src/assets/components/xds-headerbar/xds-headerbar.component.html
+++ b/xdsclient/src/assets/components/xds-headerbar/xds-headerbar.component.html
@@ -139,7 +139,14 @@
 
     </nav>
   </div>
-  <div>
+
+  <div class="row">
+    <div>
+      <a class="header-item" href="elearning"> E-Learning </a>
+    </div>
+    <div>
+      <a class="header-item" href="onlineanalysis"> Online analysis </a>
+    </div>
     <button type="button" (click)="OpenUserMenu()" class="btn btn-circle btn-md dropdown" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       <i class="fa fa-user fa-2x">
         <span id="logB" class="badge badge-danger">
@@ -162,6 +169,7 @@
     </div> 
     </div>
   </div>
+
 
 </header> 
 
