--- a/xdsclient/src/app/app.component.css
+++ b/xdsclient/src/app/app.component.css
@@ -1,5 +1,6 @@
 body{
     padding: 120px 50px 50px 50px;
+ 
 }
 
 .containerbackground
@@ -8,10 +9,20 @@ body{
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+
 }
 
-/* 
 
+/* 
+.disable-div{
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    background-color: aqua;
+    position: absolute;
+    top:0;
+    left:0;
+}
 @media (max-width:1030px){
     .container{
         padding:0px;
