--- a/xdsclient/src/app/user/sign-up-page/sign-up-page.component.html
+++ b/xdsclient/src/app/user/sign-up-page/sign-up-page.component.html
@@ -1,26 +1,36 @@
-
-
-
-<form class="p-4">
-  <div class="form-group">
-    <label for="exampleDropdownFormEmail2">Email address</label>
-    <input type="email" class="form-control" placeholder="email@example.com">
-  </div>
-  <div class="form-group">
-    <label for="exampleDropdownFormEmail2">Confirm email address</label>
-    <input type="email" class="form-control"  placeholder="email@example.com">
-  </div>
-  <div class="form-group">
-    <label for="exampleDropdownFormPassword2">Password</label>
-    <input type="password" class="form-control"  placeholder="Password">
-  </div>
-  <div class="form-group">
-    <label for="exampleDropdownFormPassword2">Confirm password</label>
-    <input type="password" class="form-control" placeholder="Password">
-  </div>
-  <div class="form-group">
-    <label for="exampleDropdownFormPassword2">Login name </label>
-    <input type="text" class="form-control"  placeholder="Password">
-  </div>
-  <button type="submit" class="btn btn-primary">Create an account</button>
-</form>
+<mat-stepper #stepper>
+  <mat-step [stepControl]="firstFormGroup" errorMessage="Name is required.">
+    <form [formGroup]="firstFormGroup">
+      <ng-template matStepLabel>Fill out your name</ng-template>
+        <label>Name</label>
+        <input type="text" placeholder="Last name, First name" required>
+      <div>
+        <p>Go to a different step to see the error state</p>
+        <button mat-button matStepperNext>Next</button>
+      </div>
+    </form>
+  </mat-step>
+  <mat-step [stepControl]="secondFormGroup" errorMessage="Address is required.">
+    <form [formGroup]="secondFormGroup">
+      <ng-template matStepLabel>Fill out your address</ng-template>
+      <mat-form-field appearance="fill">
+        <mat-label>Address</mat-label>
+        <input matInput placeholder="Ex. 1 Main St, New York, NY" formControlName="secondCtrl"
+               required>
+      </mat-form-field>
+      <div>
+        <p>Go to a different step to see the error state</p>
+        <button mat-button matStepperPrevious>Back</button>
+        <button mat-button matStepperNext>Next</button>
+      </div>
+    </form>
+  </mat-step>
+  <mat-step>
+    <ng-template matStepLabel>Done</ng-template>
+    <p>You are now done.</p>
+    <div>
+      <button mat-button matStepperPrevious>Back</button>
+      <button mat-button (click)="stepper.reset()">Reset</button>
+    </div>
+  </mat-step>
+</mat-stepper>
