--- a/xdsclient/src/assets/components/xds-headerbar/xds-headerbar.component.html
+++ b/xdsclient/src/assets/components/xds-headerbar/xds-headerbar.component.html
@@ -1,82 +1,3 @@
-<!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!------ Include the above in your HEAD tag --------
-
-<nav class="navbar navbar-icon-top navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">
-          <i class="fa fa-home"></i>
-          Home
-          <span class="sr-only">(current)</span>
-          </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">
-          <i class="fa fa-envelope-o">
-            <span class="badge badge-danger">11</span>
-          </i>
-          Link
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">
-          <i class="fa fa-envelope-o">
-            <span class="badge badge-warning">11</span>
-          </i>
-          Disabled
-        </a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <i class="fa fa-envelope-o">
-            <span class="badge badge-primary">11</span>
-          </i>
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-    </ul>
-    <ul class="navbar-nav ">
-      <li class="nav-item">
-        <a class="nav-link" href="#">
-          <i class="fa fa-bell">
-            <span class="badge badge-info">11</span>
-          </i>
-          Test
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">
-          <i class="fa fa-globe">
-            <span class="badge badge-success">11</span>
-          </i>
-          Test
-        </a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
-
- -->
-
-
 
 <head>
   <meta charset="UTF-8">
@@ -87,45 +8,106 @@
 </head>
 
 <header>
-  <div>
-      
-    <nav class="navigation">
-      <div id="nav-landing" style="display: none;">
-      <a href="https://xray.physik.uni-siegen.de/home/" class="logo">
-        <img src="../../../assets/Images/logo2.PNG">
+  <nav class="navbar col-md-16">
+    <div class="col-md">
+      <a href="https://www.daphne4nfdi.de/" class="logo">
+        <img src="../../../assets/Images/daphne.png">
       </a>
-      
+    </div>
+    <div *ngIf="isLanding" class="col-md-9">
+      <i id="services" (click)="Scroll($event)" class="fas fa-glasses header-item">
+        <div>Our interests</div>
+      </i>
+      <i  id="projects"(click)="Scroll($event)" class="fas fa-hands-helping header-item">
+        <div>Our Services</div>
+      </i>  
+      <i  id="news" (click)="Scroll($event)" class="fa fa-newspaper header-item">
+        <div>Our News</div>
+      </i> 
+      <i id="members" (click)="Scroll($event)" class="fa fa-users header-item">
+        <div>Our Team</div>
+      </i>  
+      <i  id="contact" (click)="Scroll($event)" class="fa fa-phone header-item">
+        <div>Contact Us</div>
+      </i>  
+    </div>
+    <div *ngIf="!isLanding" class="col-md-9">
+      <i routerLink="/home" class="fas fa-home header-item">
+        <div>Home</div>
+      </i>
+    </div>
+    <div class="col-md">
+      <div class="col-md">
+        <button type="button" (click)="OpenUserMenu()" [ngStyle]="isLogged && loggedUserIm.length>1? {'background-image': 'url(../../../assets/Images/usersimages/'+loggedUserIm+')'}:''" class="btn btn-circle btn-md dropdown" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <i  *ngIf="!isLogged" class="b fa fa-user fa-2x">
+            <span class="badge badge-danger">
+              <i  class="fas fa-ban"></i>
+            </span>
+          </i>
+          <i *ngIf="isLogged && loggedUserIm.length<1" class="b fa fa-user fa-2x">
+            <span  class="badge badge-success">
+              <i class="fas fa-check"></i>
+            </span>
+          </i>
+        </button> 
+      </div>
+    </div>
+
+    <div id="userMenuContents" class="dropdown-content" style="display: none;">
+      <div class="dropdown">
+        <a *ngFor="let item of headerUMItems"  [class]="item.Button" [href]="item.RouterLink" aria-hidden="true" >
+          <i  >
+            {{item.Name}}
+          </i>
+        </a> 
+        <a class="fa fa-cog" href="#">
+          <i >
+            Setting
+          </i>
+        </a>
+      </div>
+    </div>  
+  </nav>
+</header>
+<!-- 
+<header class="col-md-12">
+  <div class=" col-md-8 ">  
+    <nav class="navigation">
+      <div *ngIf="isLanding" id="nav-landing">
+        <a class="col-md-1" href="https://www.daphne4nfdi.de/" class="logo">
+          <img src="../../../assets/Images/daphne.png">
+        </a>
         
-          <i id="services" (click)="Scroll($event)" class="fas fa-glasses header-item">
+          <i class="col-md-1" id="services" (click)="Scroll($event)" class="fas fa-glasses header-item">
             <div>Our interests</div>
           </i>
        
 
        
-          <i id="projects"(click)="Scroll($event)" class="fas fa-hands-helping header-item">
+          <i class="col-md-1"  id="projects"(click)="Scroll($event)" class="fas fa-hands-helping header-item">
             <div>Our Services</div>
           </i>  
           
         
     
-          <i id="news" (click)="Scroll($event)" class="fa fa-newspaper header-item">
+          <i class="col-md-1"  id="news" (click)="Scroll($event)" class="fa fa-newspaper header-item">
             <div>Our News</div>
           </i> 
       
       
-          <i id="members" (click)="Scroll($event)" class="fa fa-users header-item">
+          <i class="col-md-1"  id="members" (click)="Scroll($event)" class="fa fa-users header-item">
             <div>Our Team</div>
           </i>  
       
        
-          <i id="contact" (click)="Scroll($event)" class="fa fa-phone header-item">
+          <i class="col-md-1"  id="contact" (click)="Scroll($event)" class="fa fa-phone header-item">
             <div>Contact Us</div>
           </i>  
         
       </div>
-      <div id="nav-other">
-        <a href="https://xray.physik.uni-siegen.de/home/" class="logo">
-          <img src="../../../assets/Images/logo2.PNG">
+      <div  *ngIf="!isLanding" id="nav-other">
+        <a href="https://www.daphne4nfdi.de/" class="logo">
+          <img src="../../../assets/Images/daphne.png">
         </a>
      
         <i  class="fas fa-home header-item">
@@ -143,9 +125,6 @@
   <div class="row">
     <div>
       <a class="header-item" href="elearning"> E-Learning </a>
-    </div>
-    <div>
-      <a class="header-item" href="onlineanalysis"> Online analysis </a>
     </div>
     <button type="button" (click)="OpenUserMenu()" class="btn btn-circle btn-md dropdown" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       <i class="fa fa-user fa-2x">
@@ -168,48 +147,7 @@
         </a>
     </div> 
     </div>
-  </div>
+  </div> 
 
 
-</header> 
-
-<!-- 
-
-
-<div>
-  <nav class="navbar navbar-expand-lg navbar-light xds-nave-bar ">
-    <div class="collapse navbar-collapse container" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto" >
-        <li class="nav-item" *ngFor="let item of headerItems">
-          <a class="nav-link" [href]="item.RouterLink">{{item.Name}}</a>
-        </li>
-
-
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        
-        <div>
-          <button type="button" (click)="OpenUserMenu()" class="btn btn-circle btn-md dropdown" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fa fa-user fa-2x"></i>
-          </button>
-          <div id="userMenuContents" class="dropdown-content" style="display: none;">
-            <div class="dropdown">
-                <a *ngFor="let item of headerUMItems"  [class]="item.Button" [href]="item.RouterLink"  >
-                  <i  >
-                    {{item.Name}}
-                  </i>
-                </a> 
-                <a class="fa fa-cog" href="#">
-                  <i  >
-                    Setting
-                  </i>
-                </a>
-            </div>        
-          </div>
-        </div>
-      </form>
-    </div>
-  </nav>
-</div>
- -->
+</header> -->
