--- a/xdsclient/src/app/user/login-page/login-page.component.html
+++ b/xdsclient/src/app/user/login-page/login-page.component.html
@@ -7,7 +7,7 @@
                         <form>
                             <div class="d-flex justify-content-center">
                                 <div class="brand_logo_container">
-                                    <img src="../../../assets/Images/logo.png" class="brand_logo" alt="Logo">
+                                    <img src="../../../assets/Images/daphne.png" class="brand_logo" alt="Logo">
                                 </div>
                             </div>
                             <br>
