--- a/xdsclient/src/assets/components/xds-headerbar/xds-headerbar.component.css
+++ b/xdsclient/src/assets/components/xds-headerbar/xds-headerbar.component.css
@@ -1,43 +1,75 @@
- nav{
-  font-family: 'Poppins', sans-serif;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  scroll-behavior: smooth; 
-}
-
-nav i {
-  cursor: pointer;
-
-}
-
-.xds-nave-bar{
-  background-color: grey;
-  margin-top: -20px;
-  position: fixed;
+nav {
+  color: var(--main-color);
+  min-height: 90px;
+  height: auto;
+  background-color: var(--secondary-color);
   width: 100%;
-  z-index: 100;
-}     
+  position: fixed;
+  z-index: 999;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px;
+}
+
+.logo img{
+  margin-left: 20px;
+  max-width: 160px;
+  max-height: 80px;
+  transition: 0.7s ease;
+  padding: 5px;
+}
+
+.logo img:hover{
+ transform: scale(1.2);
+}
+
+
+.header-item{
+  text-decoration: none;
+  font-size: 30px;
+  font-weight: 10px;
+  padding: 20px;
+  justify-content:center;
+  text-align: center;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+}
+
+nav i div{
+  margin-top: 10px;
+  font-size: .5em;
+}
+
+nav i:hover:not(.b){
+  background-color: var(--main-color-low);
+  color:  var(--secondary-color);
+  transform: rotate(1turn);
+}
 
 .btn-circle.btn-md {
-  width: 50px;
-  height: 50px;
-  border-radius: 25px;
-  font-size: 10px;
-  margin-right: 25px;
+  width: 100%;
+  height: 100%;
+  min-height: 80px;
+  max-width: 80px;
+  border-radius: 50%;
+  font-size: 20px;
   text-align: center;
   color: var(--main-color);
   border:1px solid var(--main-color);
   transition: 0.7s ease;
-
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .btn-circle.btn-md:hover{
-  transform: scale(2);
-  background-color: var(--main-color);
-  color: #f0f0f0;;
-  border:1px solid #f0f0f0;;
+  transform: scale(1.2);
+  background-color: var(--main-color-low);
+  color:  var(--secondary-color);
+  border:1px solid  var(--secondary-color);
+
 }
+
 
 
 .dropdown a{
@@ -49,7 +81,7 @@ nav i {
 .dropdown-content a:hover{
   text-decoration: none;
   cursor: pointer;
-  background-color: #f0f0f0;
+  background-color:  var(--secondary-color);
   border: 1px solid black;
   transform: scale(1.1);
 
@@ -58,7 +90,7 @@ nav i {
   position:absolute;
   right: 0;
   top: 90px;
-  background-color: #f9f9f9;
+  background-color:  var(--secondary-color);
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
@@ -72,55 +104,9 @@ nav i {
 
 }
 
-header {
-  color: var(--main-color);
-  height: 90px;
-  background-color: #f0f0f0;
-  width: 100%;
-  position: fixed;
-  z-index: 999;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 50px 50px 50px 50px ;
-}
-
-.logo img{
-  width: 160px;
-  height: 80px;
-  margin: -50px 50px 0px 25px;
-  transition: 0.7s ease;
-}
-
-.logo img:hover{
- transform: scale(1.2);
-}
-
-.header-item{
-  
-  text-decoration: none;
-  font-size: 30px;
-  font-weight: 10px;
-  padding: 20px;
-  justify-content:center;
-  text-align: center;
-  transition: 0.5s ease-in-out;
-}
-.navigation i div{
-  margin-top: 10px;
-  font-size: .5em;
-}
-
-.navigation i:hover{
-  background-color: var(--main-color);
-  opacity: 0.7;
-  color: #f0f0f0;
-  transform: rotate(1turn);
-}
-
 .active{
   background-color: var(--main-color);
-  color: #f0f0f0; 
+  color: var(--secondary-color);
 }
 
 
